src/components/Shared/styles/react-bootstrap-table.module.scss
@import "./../../../constants/variables.scss";

table {
	background-color: $column-background-color;
	table-layout: fixed;

	tr {
		height: 3rem;

		&:nth-child(even) {
			background-color: $row-even-background-color;
			&:hover {
				background-color: lighten($color: $row-even-background-color, $amount: 10);
			}
		}
		&:nth-child(odd) {
			background-color: $row-odd-background-color;
			&:hover {
				background-color: lighten($color: $row-odd-background-color, $amount: 10);
			}
		}
		th {
			background-color: #4c4c50;
			color: white;
			font-weight: bold;
		}

		td {
			color: white;
			cursor: pointer;
			font-size: 0.9rem;
		}

		& span.actionIcons svg {
			transition: all 0.5s ease-in-out;
			&:hover {
				color: darken($color: #e26d6d, $amount: 0);
				transform: rotate(90deg) scale(1.5);
			}
			&:first-child {
				margin-right: 0.5rem;
			}
			&:last-child {
				margin-left: 0.5rem;
			}
		}
	}
}

div.row.react-bootstrap-table-pagination-total {
	& div {
		padding-top: 0;
	}
}

